# pydecorators

./: .external-links-ignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOGFOOD.md  GOAL.md  LICENSE  PLAN.md  README.md  RELEASE.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  docs-or-release-question.yml
.github/workflows/: ci.yml  publish.yml
docs/: API_DESIGN.md  API_REFERENCE.md  PUBLIC_API.md  cache_result.md  circuit_breaker.md  composition.md  deprecated.md  disk_cache_backend.md  docs_index_exemptions.md  docs_site_plan.md  exceptions.md  future_extension_decisions.md  index.md  log_calls.md  markdown_anchor_policy.md  measure_time.md  observability_integrations.md  quality_gates.md  rate_limit.md  redis_backend_design.md  release_note_template.md  require_env.md  retry.md  security_audit_2026-05-21.md  security_hardening.md  sync_timeout_decision.md  timeout.md  validate_types.md  web_frameworks.md  writing_style_audit.md
docs/examples/: circuit_breaker_examples.py  cli_examples.py  composition_examples.py  deprecated_examples.py  disk_cache_backend_examples.py  log_calls_examples.py  measure_time_examples.py  observability_integration_examples.py  public_exception_examples.py  rate_limit_examples.py  readme_examples.py  require_env_examples.py  retry_examples.py  retry_idempotency_examples.py  timeout_examples.py  validate_types_examples.py  web_framework_examples.py
dogfood/: service_client.py
scripts/: benchmark_decorators.py  check_docs_example_index.py  check_external_links.py  check_package_name_availability.py  coverage_summary.py  docs-policy.sh  dogfood_external_project.py  dogfood_local_wheel.py  smoke_examples.py  smoke_imports.py  smoke_wheel_install.py  stress_disk_cache_concurrency.py
src/pydecorators/: __init__.py  _core.py  _typing.py  cache_result.py  circuit_breaker.py  deprecated.py  exceptions.py  log_calls.py  measure_time.py  rate_limit.py  redis_backend.py  require_env.py  retry.py  timeout.py  validate_types.py
src/useful_decorators/: __init__.py  _core.py  _typing.py  cache_result.py  circuit_breaker.py  deprecated.py  exceptions.py  log_calls.py  measure_time.py  rate_limit.py  redis_backend.py  require_env.py  retry.py  timeout.py  validate_types.py
tests/: docs_example_policy_helpers.py  docs_policy_helpers.py  test_benchmark_script.py  test_cache_backend_conformance.py  test_cache_directory.py  test_cache_result.py  test_cache_result_design_docs.py  test_cache_result_support.py  test_circuit_breaker.py  test_core.py  test_deprecated.py  test_disk_cache_backend.py  test_disk_cache_backend_design_docs.py  test_docs_examples.py  test_docs_policy.py  test_dogfood_harness.py  test_import.py  test_log_calls.py  test_measure_time.py  test_package_name_availability.py  test_project_metadata.py  test_public_api.py  test_public_api_policy.py  test_public_exception_policy.py  test_quality_gates.py  test_rate_limit.py  test_redis_backend.py  test_redis_backend_security_docs.py  test_redis_optional_dependency.py  test_release_checklist.py  test_release_workflow.py  test_require_env.py  test_retry.py  test_timeout.py  test_validate_types.py  test_version.py
