[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "useful-decorators"
version = "0.1.0"
description = "A focused library of useful Python decorators for reliability, caching, rate limiting, timeouts, and developer ergonomics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Russ Davies" }
]
keywords = [
  "decorators",
  "retry",
  "cache",
  "rate-limit",
  "timeout",
  "python",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/RusDavies/useful-decorators"
Repository = "https://github.com/RusDavies/useful-decorators"
Issues = "https://github.com/RusDavies/useful-decorators/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/useful_decorators"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=useful_decorators --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
