[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "blakemere-wraptools"
version = "0.1.1"
description = "A focused library of useful Python decorators for reliability, caching, rate limiting, timeouts, and developer ergonomics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Russ Davies" }
]
keywords = [
  "decorators",
  "retry",
  "cache",
  "rate-limit",
  "timeout",
  "python",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
redis = [
  "redis>=5",
]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pre-commit>=4.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/RusDavies/pydecorators"
Repository = "https://github.com/RusDavies/pydecorators"
Issues = "https://github.com/RusDavies/pydecorators/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydecorators"]

[tool.hatch.envs.default.scripts]
docs-policy = "./scripts/docs-policy.sh"
full-gate = [
  "./scripts/docs-policy.sh",
  "ruff check .",
  "ruff format --check .",
  "mypy",
  "python scripts/smoke_imports.py",
  "python scripts/smoke_examples.py",
  "pytest",
  "python -m build",
  "python scripts/smoke_wheel_install.py",
  "python scripts/dogfood_local_wheel.py",
  "python scripts/dogfood_external_project.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "redis"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=pydecorators --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
markers = [
  "docs_policy: documentation policy, docs example, and release documentation checks",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
